--- a/index.html
+++ b/index.html
@@ -3,74 +3,113 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Это Капибара</title>
-    <link rel="stylesheet" href="./fonts/fonts.css">
-    <style>
-        * {
-            margin: 0;
-        }
-body {
-    font-family: "StratosSkyeng" , sans-serif;
-    text-align: center;
-}
-h1 {
-    font-size: 40px;
-}
-h2 {
-    font-size: 30px;
-}
-p {
-font-size: 20px;
-text-align: left;
-margin-top: 15px;
-}
-div {
-    width: 700px;
-    margin-top: 50px;
-    margin-left:auto ;
-    margin-right:auto ;
-}
-img {
-    width: 800px;
-    margin-top: 50px;
-    border-radius: 25px;
-    a {
-      font-size: 25px;  
-      margin: 50px;
-      display: block;
-    }
-}
-    </style>
+    <title>Генератор интернет-цитат</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-    <img src="/images/1.png" alt="">
-    <div>
-        <h1>Это капибара ☝️</h1>
-        <p>Самый большой грызун в мире. Мягкий, пушистый и очень дружелюбный.
-        </p>
-    </div>
-    <div>
-        <h2>Где обитают</h2>
-        <p>Капибары обитают в Южной Америке в умеренных и тропических областях, как правило возле водоемов. 
-            Ну необходима им вода, что тут поделать...
-        </p>
-    </div><div>
-        <h2>Чем питаются</h2>
-        <p>Капибары едят почти всё, что растет возле воды. Зачем далеко ходить, когда можно поесть прямо из ванны? А покушать они любят. 🙃 Поэтому и весят до 65 кг!
+    <div class="main">
+        <h1 class="main__title">Генератор интернет-цитат</h1>
+        <div class="main__img-wrap">
+            <img src="images/1.png" id="image" class="main__img show">
+        </div>
+        <div class="main__quote-wrap">
+            <p id="quote" class="main__quote show">Кто рано встает, тот потом пожалеет о своем решении.</p>
+        </div>
 
-        </p>
-    </div><div>
-        <h2>Чем живут</h2>
-        <p>Капибары обожают купаться, тусить с другими капибарами и загорать.
-            Капибарам не чуждо общение и с другими животными, и с людьми.
-            В общем, капибары - хорошие конкуренты кошкам и собакам! 😀
-            
-        </p>
+        <button class="main__button" onclick="generateQuote()">Сгенерировать цитату</button>
     </div>
-    <a href="/kapibara1.html">Другая капибара</a>
+
+    <script>
+        let quote = document.getElementById("quote");
+        let image = document.getElementById("image");
+        // console.log(quote);
+
+        let beginning = [
+            'Кто рано встает, ',
+            'Не бойся ошибаться, ',
+            'Когда меня рожали, ',
+            'Каждый может кинуть камень в волка, ',
+            'Нельзя стоять, когда другие работают, ',
+            'Иногда, жизнь — это жизнь, ',
+        ];
+
+        let ending = [
+            'тот потом пожалеет о своем решении.',
+            'собственно, тогда я и родился.',
+            'но не каждый может кинуть волка в камень.',
+            'надо лежать.',
+            'а ты в ней — иногда.',
+            'бойся не ошибаться.',
+        ];
+
+        let images = [
+            '1.png',
+            '2.png',
+            '3.png',
+            '4.png',
+            '5.png',
+            '6.png',
+        ]
+        function generateQuote() {
+            let randomBegining = getRandomElement(beginning);
+            let randomEding = getRandomElement(ending);
+            let randomImg = getRandomElement(images);
+
+
+            let randomQoute = randomBegining + randomEding;
+
+            hide();
+            console.log(randomQoute)
+
+
+            console.log(randomQoute);
+
+
+
+
+
+            function getRandomElement(arr) {
+                return arr[Math.floor(Math.random() * arr.length)]
+            }
+
+
+
+            // Скрывает текущие цитату и изображение
+            function hide() {
+                image.classList.remove('show');
+                quote.classList.remove('show');
+                // Показывает следующие цитату и изображение с задержкой в пол секунды, чтобы успел сработать transition
+                setTimeout(show, 500);
+            }
+
+            // Показывает новые цитату и изображение 
+            function show() {
+                // Проверяет кол-во символов в тексте. Если их меньше 48, то меняет шрифт и выравнивает текст по центру, иначе - стандартные стили
+                if (randomQoute.length <= 48) {
+                    quote.style.fontSize = '42px';
+                    quote.style.justifyContent = 'center';
+                } else {
+                    quote.style.fontSize = '';
+                    quote.style.justifyContent = '';
+                }
+
+                image.src = 'images/' + randomImg;
+                quote.textContent = randomQoute;
+                // Тут нужно добавить изменение текстового содержимого объекта quote
+
+                image.classList.add('show');
+                quote.classList.add('show');
+            }
+        }
+
+
+
+
+
+
+    </script>
 </body>
 
 </html>
